public class ChoiceQuestion extends Question{


private String [] choices = new String[4];

public ChoiceQuestion()
{
    super();
}


public boolean addChoice(String text,boolean answer)
{


    return false;
}


public void display()
{


}

public void presentQuestion()
{

}


}
